fixed subTitles align text to center

--- a/frontend/src/style/_custom.scss
+++ b/frontend/src/style/_custom.scss
@@ -14,6 +14,7 @@
     color: $gray-500;
     font-size: 1.25rem;
     margin-bottom: 1.5rem;
+    text-align: center;
 }
 
 .card-img-top{
